deploy/k8s/ingress-keycloak.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /auth
          backend:
            serviceName: keycloak-latest-http
            servicePort: 32100
